- changed default values of "heuristics/*diving/backtrack to TRUE
- changed default value of "nodeselection/restartdfs/stdpriority" to 10000
- changed meaning of parameter setting "nodeselection/childsel = l"; old meaning is now called 'r'
- changed default value of "presolving/restartfac" to 0.05
- changed default value of "presolving/restartminred" to 0.10

features:
- presolving, cut separation, primal heuristics, and strong branching now better respect time limit
- time limit is now forwarded to lp solving algorithm
- added option to write node LP and MIP relaxations to LP file from interactive shell
- modified cut selection code
- cut conversion into linear constraints after a restart now works better
- if possible, objective function is scaled to make objective value integral with gcd 1
- slightly modified bound substitution heuristic in SCIPcalcMIR() and SCIPcalcStrongCG()
- slightly less conservative in numerics for SCIPmakeRowIntegral()
- removed performance bottleneck with non-bfs based node selectors and large leaf queues at the cost of a small
  memory overhead (2 ints per node in the leaf queue); this improves performance quite a bit on instances that
  take a large number of branching nodes

fixed bugs:
- fixed bug with too long variable names
- fixed bug with strange user descriptions of plugins
- changed position of some asserts to prevent segmentation faults
- SCIPgetAvgPseudocostCount() and SCIPgetAvgPseudocostCountCurrentRun() now return the average over all integer variables instead
  of all variables, since pseudo costs are not recorded for continuous variables
- fixed wrong sorting of plugins with priorities close to INT_MIN or INT_MAX
- replaced "line" by "read" in Makefile, since "line" is non-standard
- fixed bug in variable bound constraint handler with changing bounds on multi-aggregated variables
- fixed bug in variable bounds search and insertion method
- fixed bug with LP size management in probing if column generation is used